force-app/main/default/objects/Account/fields/aaa__c.field-meta.xml
<CustomField>
    <fullName>aaa__c</fullName>
    <label>aaa</label>
    <type>Email</type>
</CustomField>