force-app/main/default/objects/Account/fields/asdf__c.field-meta.xml
<CustomField>
    <fullName>asdf__c</fullName>
    <label>asdf</label>
    <type>AutoNumber</type>
</CustomField>