force-app/main/default/objects/Account/fields/Cool_Account__c.field-meta.xml
<CustomField>
    <fullName>Cool_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the account is a cool one.</description>
    <inlineHelpText>Is this account really cool?</inlineHelpText>
    <label>Cool Account</label>
    <type>Checkbox</type>
</CustomField>