force-app/main/default/objects/Account/fields/demo__c.field-meta.xml
<CustomField>
    <fullName>demo__c</fullName>
    <label>demo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>