force-app/main/default/objects/Account/fields/fesf__c.field-meta.xml
<CustomField>
    <fullName>fesf__c</fullName>
    <label>fesf</label>
    <type>AutoNumber</type>
</CustomField>