force-app/main/default/objects/Account/fields/ForSumeet__c.field-meta.xml
<CustomField>
    <fullName>ForSumeet__c</fullName>
    <label>ForSumeet</label>
    <length>20</length>
    <type>Text</type>
</CustomField>