force-app/main/default/objects/Account/fields/hjvhjh__c.field-meta.xml
<CustomField>
    <fullName>hjvhjh__c</fullName>
    <label>hjvhjh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>