force-app/main/default/objects/Account/fields/jhvhvjhvh__c.field-meta.xml
<CustomField>
    <fullName>jhvhvjhvh__c</fullName>
    <label>jhvhvjhvh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>