force-app/main/default/objects/Account/fields/lklkhnlk__c.field-meta.xml
<CustomField>
    <fullName>lklkhnlk__c</fullName>
    <label>lklkhnlk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>