force-app/main/default/objects/Account/fields/Net_worth__c.field-meta.xml
<CustomField>
    <fullName>Net_worth__c</fullName>
    <label>Net worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>