force-app/main/default/objects/Account/fields/t__c.field-meta.xml
<CustomField>
    <fullName>t__c</fullName>
    <defaultValue>false</defaultValue>
    <label>t</label>
    <type>Checkbox</type>
</CustomField>