force-app/main/default/objects/Account/fields/xxx__c.field-meta.xml
<CustomField>
    <fullName>xxx__c</fullName>
    <label>xxx</label>
    <type>AutoNumber</type>
</CustomField>