force-app/main/default/objects/Account/fields/zzz__c.field-meta.xml
<CustomField>
    <fullName>zzz__c</fullName>
    <label>zzz</label>
    <type>AutoNumber</type>
</CustomField>